--- a/Demo/index.html
+++ b/Demo/index.html
@@ -29,16 +29,16 @@
 		    <div data-carousel data-animation="slide" data-infinite="true" data-start-slide="1">
 		        <ul>
 		            <li>
-		                <img src="images/slide1.jpg" />
+		                <img src="http://lorempixel.com/930/350/?1" />
 		            </li>
 		            <li>
-		                <img src="images/slide2.jpg" />
+		                <img src="http://lorempixel.com/930/350/?2" />
 		            </li>
 		            <li>
-		                <img src="images/slide3.jpg" />
+		                <img src="http://lorempixel.com/930/350/?3" />
 		            </li>
 		            <li>
-		                <img src="images/slide4.jpg" />
+		                <img src="http://lorempixel.com/930/350/?4" />
 		            </li>
 		        </ul>
 		    </div>		    
@@ -49,16 +49,16 @@
 		    <div data-carousel data-animation="slide" data-infinite="false" data-start-slide="1">
 		        <ul>
 		            <li>
-		                <img src="images/slide1.jpg" />
+		                <img src="http://lorempixel.com/930/350/?1" />
 		            </li>
 		            <li>
-		                <img src="images/slide2.jpg" />
+		                <img src="http://lorempixel.com/930/350/?2" />
 		            </li>
 		            <li>
-		                <img src="images/slide3.jpg" />
+		                <img src="http://lorempixel.com/930/350/?3" />
 		            </li>
 		            <li>
-		                <img src="images/slide4.jpg" />
+		                <img src="http://lorempixel.com/930/350/?4" />
 		            </li>
 		        </ul>
 		    </div>		    
@@ -69,16 +69,16 @@
 		    <div data-carousel data-animation="fade" data-start-slide="1">
 		        <ul>
 		            <li>
-		                <img src="images/slide1.jpg" />
+		                <img src="http://lorempixel.com/930/350/?1" />
 		            </li>
 		            <li>
-		                <img src="images/slide2.jpg" />
+		                <img src="http://lorempixel.com/930/350/?2" />
 		            </li>
 		            <li>
-		                <img src="images/slide3.jpg" />
+		                <img src="http://lorempixel.com/930/350/?3" />
 		            </li>
 		            <li>
-		                <img src="images/slide4.jpg" />
+		                <img src="http://lorempixel.com/930/350/?4" />
 		            </li>
 		        </ul>
 		    </div>		    
