--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,7 +3,8 @@
 
 	<head>
 
-		<link rel="stylesheet" href="../main.css" />
+		<link rel="stylesheet" href="../carousel.css" />
+		<link rel="stylesheet" href="css/demo.css" />
 
 		<script src="js/jquery-2.1.1.min.js"></script>
 		<script src="../carousel.js"></script>
@@ -11,13 +12,7 @@
 		<script>
 			$(function ()
 			{
-				$('[data-carousel]').carousel(
-					{
-						slide : function ()
-						{
-							console.log(this);
-						}
-					});
+				$('[data-carousel]').carousel();
 			});
 		</script>
 	</head>
